--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #22054a; /* You can change the background color */
+    background-color: #22054a; /* background color */
     color: white;
     text-align: center;
     padding: 10px;
